integration tests and fixes
